# tir

./: .gitignore  AGENTS.md  Cargo.toml  book.toml  codecov.yaml  package-lock.json
backends/targets/: Cargo.toml
backends/targets/checks/: target-parsers.tir
backends/targets/src/: lib.rs
backends/targets/tests/: lit.rs
core/: Cargo.toml  build.rs
core/benches/: disjoint_set.rs  egg_math.rs  egraph.rs  math_shared.rs
core/checks/IRRoundtrip/: bitcast.tir  declare.tir  float.tir  fpmath-block.tir  indirect-result-value.tir  indirect-result.tir  memcpy.tir  memset.tir  non-ascii-comment.tir  ptr-alloca-store-load.tir  ptradd.tir  ptrdiff.tir  scf-break.tir  scf-while-result.tir  scf-while.tir  tuple.tir  variadic-call.tir
core/checks/Inputs/: basic.tir
core/checks/InstCombine/: add_zero_identity.tir  branch_dominated.tir  branch_dominated_nested.tir  branch_join_no_fold.tir  constant_fold.tir  cross_block.tir  cse.tir  fold_then_strength_reduce.tir  gate_fold.tir  guarded_region.tir  mul_pow2_to_shift.tir  sub_self_is_zero.tir  type_in_key.tir
core/checks/LowerMemoryIntrinsics/: memcpy.tir  memset.tir
core/checks/Mem2Reg/: basic.tir  control_flow_keep.tir  control_flow_promote.tir  dead_alloca_erased.tir  multiple_stores_keep.tir  stored-pointer-escapes.tir
core/checks/SCFToCFG/: for-result.tir  if-result.tir  while-break.tir  while.tir
core/checks/Verifier/: bitcast-width.tir  memcpy-size.tir  memset-size.tir  memset-value.tir  token-cannot-be-function-argument.tir  token-cannot-be-yielded.tir  variadic-call-fixed-args.tir
core/defs/: isel.sexp
core/src/: attributes.rs  block.rs  builder.rs  context.rs  diagnostics.rs  dialect.rs  error.rs  graph.rs  green.rs  interfaces.rs  ir_formatter.rs  lib.rs  operand.rs  operation.rs  parser.rs  pass.rs  pbqp.rs  region.rs  region_format.rs  sem.rs  ty.rs  value.rs
core/src/analysis/: defuse.rs  dominance.rs  edge_facts.rs  gated_ssa.rs  manager.rs  mod.rs
core/src/backend/: abi.rs  asm_syntax.rs  call_lowering.rs  lexer.rs  liveness.rs  lower.rs  mod.rs  operations.rs  parser.rs  pipeline.rs  printer.rs  regalloc.rs  target.rs
core/src/builtin/: module.rs
core/src/dialects/: mod.rs
core/src/egraph/: ematch.rs  mod.rs  print.rs  rewrite.rs
core/src/graph/: egraph.rs  mod.rs  pattern.rs  postorder.rs
core/src/parse/: common.rs  ir.rs  mod.rs  text.rs  tokens.rs
core/src/passes/: dce.rs  lower_memory_intrinsics.rs  mem2reg.rs  mod.rs  scf_to_cfg.rs
core/src/sem/: discover.rs
core/src/sem_expr/: apfloat.rs  apint.rs  bitvec.rs  discover.rs  exec.rs  infer.rs  lean.rs  mod.rs  rocq.rs  simplification.rs  smtlib.rs
core/src/sem_expr2/: exec.rs  mod.rs
core/src/tst/: mod.rs  ops.rs
core/src/utils/: apfloat.rs  apint.rs  context_union_find.rs  disjoint_set.rs  mod.rs  scoped_disjoint_set.rs
core/tests/: lit.rs  operation_identity.rs
fcc/: Cargo.toml  README.md  bin.rs
fcc/benches/: codegen.rs
fcc/checks/Ast/: assignment_value.c  bitwise_precedence.c  bool_type.c  cast_sizeof.c  comma.c  compound_assignment.c  conditional.c  goto.c  hello_stdio.c  increment.c  integer_types.c  local_typedef.c  parenthesized.c  scalar_literals.c  std_override.c  sum.c  switch.c  typedef_cast.c  typedef_param_shadow.c  typedef_shadow.c
fcc/checks/Codegen/: arm64_aligned_composite.c  arm64_composite.c  arm64_composite_pressure.c  arm64_hfa.c  arm64_hfa_pressure.c  arm64_large_composite.c  arm64_large_composite_callee.c  arm64_large_composite_return.c  arm64_odd_composite.c  arm64_odd_composite_pair.c  bitwise_shift.c  break_unreachable.c  cast.c  character.c  comma.c  compound_assign.c  conditional.c  do_while.c  double_arithmetic.c  double_compound_assign.c  float_literal.c  for-compound-step.c  for.c  goto.c  hello_stdio.c  if.c  increment.c  integer_conversion.c  integer_division.c  integer_remainder.c  local_arith.c  logical.c  long_target.c  loop_control.c  riscv_fp_aggregate_nested.c  riscv_fp_aggregate_parameter.c  riscv_fp_aggregate_register_pressure.c  riscv_fp_aggregate_return.c  riscv_fp_integer_aggregate.c  riscv_large_composite.c  (+12 more)
fcc/checks/Driver/: dry_run_assembly_default_output.c  dry_run_compile.c  link_dry_run.c  preprocess.c  unknown_flag.c  warn_ignore.c
fcc/checks/Inputs/: add3.c  assignment_value.c  basic_do_while.c  basic_for.c  basic_if.c  basic_while.c  bitwise_precedence.c  bool_type.c  break_unreachable.c  cast_sizeof.c  codegen_bitwise_shift.c  codegen_cast.c  codegen_character.c  codegen_comma.c  codegen_compound_assign.c  codegen_conditional.c  codegen_double_arithmetic.c  codegen_double_compound_assign.c  codegen_float_literal.c  codegen_goto.c  codegen_increment.c  (+51 more)
fcc/include/: stdio.h
fcc/src/: ast.rs  cir.rs  codegen.rs  codegen_tests.rs  diagnostics.rs  driver.rs  lang_options.rs  lexer.rs  lexer_tests.rs  lib.rs  parser.rs  passes.rs  preprocessor.rs  preprocessor_tests.rs  sema.rs
fcc/tests/: abi_conformance.rs  gcc-torture-known-failures.txt  lang_options.rs  link_e2e.rs  lit.rs  sema.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arm64-assembly.rs  riscv-assembly.rs  tmdl.rs
simulator/isasim/: Cargo.toml
simulator/sched/: Cargo.toml
tmdl/: Cargo.toml  bin.rs
tmdl/benches/: expander.rs  lexer.rs  parser.rs
tmdl/checks/: simple.tmdl  test_suite.toml
tmdl/src/: ast.rs  btor2gen.rs  compiler.rs  error.rs  expander.rs  isagen.rs  json.rs  lean.rs  leangen.rs  lexer.rs  lib.rs  markdown.rs  parser.rs  rocqgen.rs  rustgen.rs  sail_propertygen.rs  sailproofgen.rs  sem_expr_conv.rs  sem_expr_state.rs  sema.rs  smtlibgen.rs  tokenizer.rs  typeck.rs  types.rs  utils.rs
tmdl/tests/: compiler.rs  json.rs  lit.rs  markdown.rs  rustgen.rs
tools/: Cargo.toml
tools/checks/: test_suite.toml
tools/src/: axioms.rs  common.rs  lib.rs  main.rs  model_check.rs
tools/tests/: mc_verify.rs  model_check.rs
utils/filecheck/: Cargo.toml
utils/fuzz/: Cargo.toml
utils/isa-test-suite/: Cargo.toml
utils/jit/: Cargo.toml  README.md
utils/lit/: Cargo.toml
utils/pdl/: Cargo.toml
utils/symbolic/: Cargo.toml
utils/tir-mc/: Cargo.toml
utils/verify/: Cargo.toml
(+720 files in other folders)
