[workspace]
resolver = "2"

members = [
    "utils/check-runner",
    "utils/filecheck",
    "utils/lit",
    "utils/not",
    "utils/tir-opt",
    "tmdl",
    "xtask",
    "core",
    "utils/macros",
    "backends/common",
    "backends/riscv",
    "utils/fuzz",
    "simulator/isasim",
    "simulator/simcore",
    "simulator/sched", "backends/arm64", "fcc",
    "backends/targets",
    "utils/tir-mc",
    "utils/isa-test-suite",
]

[profile.bench]
debug = true
lto = true
