[workspace]
resolver = "2"

members = [
    "utils/filecheck",
    "utils/lit",
    "utils/not",
    "tmdl",
    "xtask",
    "core",
    "utils/macros",
    "backends/riscv",
    "utils/fuzz",
    "simulator/isasim",
    "simulator/simcore",
    "backends/arm64",
    "backends/x86_64",
    "fcc",
    "utils/isa-test-suite",
    "utils/capi",
    "utils/adt",
    "utils/graph",
    "utils/symbolic",
    "utils/llvm",
    "utils/jit",
    "tools",
    "gpu",
]

[workspace.dependencies]
tir = { path = "core" }
tir-sim = { path = "simulator/simcore" }
tmdl = { path = "tmdl" }

# Common utils
tir-adt = { path = "utils/adt" }
tir-graph = { path = "utils/graph" }
tir-symbolic = { path = "utils/symbolic" }
tir-macros = { path = "utils/macros" }
tir-lit = { path = "utils/lit" }
tir-llvm = { path = "utils/llvm" }
tir-jit = { path = "utils/jit" }

# Per-target crates
tir-riscv = { path = "backends/riscv" }
tir-arm64 = { path = "backends/arm64" }
tir-x86_64 = { path = "backends/x86_64" }
tir-gpu = { path = "gpu" }

anyhow = "1.0.102"
ariadne = "0.6.0"
clap = "4.6.1"
criterion = "0.8.2"
linkme = "0.3.36"
logos = "0.16.1"
thiserror = "2.0.18"
quote = "1.0.45"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
syn = "2.0.117"
chumsky = "0.13.0"
serde = "1.0.228"
serde_json = "1.0.150"
regex = "1.12.4"
libfuzzer-sys = "0.4"
proptest = "1.11.0"
typed-arena = "2"

[profile.bench]
debug = true
lto = true

# Full debug info makes a clean `cargo test --no-run` produce a ~22 GB target
# dir (40+ statically linked binaries, ~97% DWARF). Line tables keep file:line
# in backtraces, which is enough outside an interactive debugger session.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Backend build scripts link all of tmdl; without this each one is a ~220 MB
# executable.
[profile.dev.build-override]
debug = false

[profile.dev.package.filecheck]
debug = false
opt-level = 3

[profile.dev.package.tir-lit]
debug = false
opt-level = 3
