[package]
name = "tir"
version = "0.1.0"
edition = "2024"

[dependencies]
tir-macros = { path = "../utils/macros" }
linkme = "0.3"
parking_lot = "0.12.3"
thiserror = "2.0.12"
ariadne = "0.3"

[dev-dependencies]
tir-lit = { path = "../utils/lit" }
criterion = { workspace = true, features = ["html_reports"] }
egg = "0.11"

[[bench]]
name = "disjoint_set"
harness = false

[[bench]]
name = "egraph"
harness = false

[[bench]]
name = "egg_math"
harness = false

[[test]]
name = "lit"
harness = false
