[package]
name = "fcc"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.16.1"
chumsky.workspace = true
ariadne = { workspace = true }
tir = { path = "../core" }
tir-riscv.workspace = true
tir-arm64.workspace = true
tir-x86_64.workspace = true
clap = { version = "4.6.0", features = ["derive"] }
tempfile = "3.27.0"

[dev-dependencies]
tir-lit = { path = "../utils/lit" }
criterion = { workspace = true }

[[bin]]
name = "fcc"
path = "bin.rs"

[[test]]
name = "lit"
harness = false

[[bench]]
name = "codegen"
harness = false
