[package]
name = "tmdl"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne.workspace = true
clap = { workspace = true, features = ["derive"] }
thiserror.workspace = true
quote.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["parsing"] }
chumsky.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tir.workspace = true
tir-adt.workspace = true
tir-symbolic.workspace = true
typed-arena.workspace = true

[[bin]]
name = "tmdlc"
path = "bin.rs"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
jsonschema.workspace = true
tir-lit.workspace = true

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "expander"
harness = false

[[test]]
name = "lit"
harness = false
