[package]
name = "tir-tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tir"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tmdl.workspace = true
tir.workspace = true
tir-riscv.workspace = true
tir-arm64.workspace = true
tir-x86_64.workspace = true
tir-gpu.workspace = true
tir-sim.workspace = true
tir-llvm.workspace = true

[dev-dependencies]
tir-lit.workspace = true

[[test]]
name = "lit"
harness = false
