[package]
name = "tir-isasim"
version = "0.1.0"
edition = "2024"

[dependencies]
tir = { path = "../../core" }
tir-sim = { path = "../simcore" }
tir-be-common = { path = "../../backends/common" }
tir-targets = { path = "../../backends/targets" }
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tir-lit = { path = "../../utils/lit" }

[[test]]
name = "lit"
harness = false
