[package]
name = "tir-isasim"
version = "0.1.0"
edition = "2024"

[dependencies]
tir.workspace = true
tir-sim.workspace = true
tir-be-common.workspace = true
tir-targets.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tir-lit.workspace = true

[[test]]
name = "lit"
harness = false
