[package]
name = "tir-sched"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tir-sched"
path = "src/main.rs"

[dependencies]
tir = { path = "../../core" }
tir-sim = { path = "../simcore" }
tir-riscv = { path = "../../backends/riscv" }
tir-be-common = { path = "../../backends/common" }
clap = { version = "4.5.58", features = ["derive"] }
