[package]
name = "filecheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "filecheck"
path = "src/lib.rs"

[[bin]]
name = "filecheck"
path = "src/main.rs"

[dependencies]
chumsky.workspace = true
ariadne.workspace = true
regex.workspace = true
clap = { workspace = true, features = ["derive"] }
