[package]
name = "tir-isa-test-suite"
version = "0.1.0"
edition = "2024"

# Differential ISA test harness: assemble each snippet, run it on `isasim` (the
# TMDL-generated simulator under test) and on a golden reference model (Spike for
# RISC-V), then compare the resulting architectural state. A mismatch means the
# TMDL description disagrees with the reference. Driven by `cargo xtask
# isa-test-suite`; shells out to external tools (spike, riscv64-unknown-elf-gcc),
# so it is intentionally not part of `cargo test --workspace`.

[lib]
name = "tir_isa_test_suite"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
