[package]
name = "tir-pdl"
version = "0.1.0"
edition = "2024"

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
ariadne.workspace = true
chumsky.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
logos.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[[bin]]
name = "tir-pdl"
path = "src/main.rs"
required-features = ["cli"]
