[package]
name = "tir-mc"
version = "0.1.0"
edition = "2024"

# llvm-mc-style driver for the machine backends: read TIR, select a target with
# `--march`/`--mcpu`, run instruction selection and/or register allocation, and
# print the resulting machine IR. Used as the codegen test tool under lit.

[[bin]]
name = "tir-mc"
path = "src/main.rs"

[dependencies]
tir = { path = "../../core" }
tir-be-common = { path = "../../backends/common" }
tir-targets = { path = "../../backends/targets" }
clap = { version = "4.5.58", features = ["derive"] }
